crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__binary_expressions-2.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
lhs != rhs
---

Some(
    Spanned(
        Binary(
            Spanned(
                Ident(
                    Spanned(
                        "lhs",
                        0..3,
                    ),
                ),
                0..3,
            ),
            Ne,
            Spanned(
                Ident(
                    Spanned(
                        "rhs",
                        7..10,
                    ),
                ),
                7..10,
            ),
        ),
        0..10,
    ),
)

--- Errors ---
[]
---
