crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__binary_expressions-6.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
lhs / rhs
---

Some(
    Spanned(
        Binary(
            Spanned(
                Ident(
                    Spanned(
                        "lhs",
                        0..3,
                    ),
                ),
                0..3,
            ),
            Div,
            Spanned(
                Ident(
                    Spanned(
                        "rhs",
                        6..9,
                    ),
                ),
                6..9,
            ),
        ),
        0..9,
    ),
)

--- Errors ---
[]
---
