crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__binary_expressions-7.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
1 + 2 - 3 * 4 / 5
---

Some(
    Spanned(
        Binary(
            Spanned(
                Binary(
                    Spanned(
                        Literal(
                            Spanned(
                                Int(1),
                                0..1,
                            ),
                        ),
                        0..1,
                    ),
                    Add,
                    Spanned(
                        Literal(
                            Spanned(
                                Int(2),
                                4..5,
                            ),
                        ),
                        4..5,
                    ),
                ),
                0..5,
            ),
            Sub,
            Spanned(
                Binary(
                    Spanned(
                        Binary(
                            Spanned(
                                Literal(
                                    Spanned(
                                        Int(3),
                                        8..9,
                                    ),
                                ),
                                8..9,
                            ),
                            Mul,
                            Spanned(
                                Literal(
                                    Spanned(
                                        Int(4),
                                        12..13,
                                    ),
                                ),
                                12..13,
                            ),
                        ),
                        8..13,
                    ),
                    Div,
                    Spanned(
                        Literal(
                            Spanned(
                                Int(5),
                                16..17,
                            ),
                        ),
                        16..17,
                    ),
                ),
                8..17,
            ),
        ),
        0..17,
    ),
)

--- Errors ---
[]
---
