crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__binary_expressions-8.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
1 == 1 + 2 / 3 != 0
---

Some(
    Spanned(
        Binary(
            Spanned(
                Binary(
                    Spanned(
                        Literal(
                            Spanned(
                                Int(1),
                                0..1,
                            ),
                        ),
                        0..1,
                    ),
                    Eq,
                    Spanned(
                        Binary(
                            Spanned(
                                Literal(
                                    Spanned(
                                        Int(1),
                                        5..6,
                                    ),
                                ),
                                5..6,
                            ),
                            Add,
                            Spanned(
                                Binary(
                                    Spanned(
                                        Literal(
                                            Spanned(
                                                Int(2),
                                                9..10,
                                            ),
                                        ),
                                        9..10,
                                    ),
                                    Div,
                                    Spanned(
                                        Literal(
                                            Spanned(
                                                Int(3),
                                                13..14,
                                            ),
                                        ),
                                        13..14,
                                    ),
                                ),
                                9..14,
                            ),
                        ),
                        5..14,
                    ),
                ),
                0..14,
            ),
            Ne,
            Spanned(
                Literal(
                    Spanned(
                        Int(0),
                        18..19,
                    ),
                ),
                18..19,
            ),
        ),
        0..19,
    ),
)

--- Errors ---
[]
---
