crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__binary_expressions.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
lhs == rhs
---

Some(
    Spanned(
        Binary(
            Spanned(
                Ident("lhs"),
                0..3,
            ),
            Eq,
            Spanned(
                Ident("rhs"),
                7..10,
            ),
        ),
        0..10,
    ),
)

--- Errors ---
[]
---
