crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__block_expressions-2.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ call_me(); and_me(); }
---

Some(
    Spanned(
        Block(
            Spanned(
                [
                    Spanned(
                        Call {
                            func: Spanned(
                                Ident(
                                    Spanned(
                                        "call_me",
                                        2..9,
                                    ),
                                ),
                                2..9,
                            ),
                            args: Spanned(
                                [],
                                9..11,
                            ),
                        },
                        2..12,
                    ),
                    Spanned(
                        Call {
                            func: Spanned(
                                Ident(
                                    Spanned(
                                        "and_me",
                                        13..19,
                                    ),
                                ),
                                13..19,
                            ),
                            args: Spanned(
                                [],
                                19..21,
                            ),
                        },
                        13..22,
                    ),
                ],
                0..24,
            ),
        ),
        0..24,
    ),
)

--- Errors ---
[]
---
