crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__block_expressions-3.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{ }
---

Some(
    Spanned(
        Block(
            Spanned(
                [],
                0..3,
            ),
        ),
        0..3,
    ),
)

--- Errors ---
[]
---
