crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__block_expressions.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
{
	testing;
	testing;
}
---

Some(
    Spanned(
        Block(
            Spanned(
                [
                    Spanned(
                        Ident(
                            Spanned(
                                "testing",
                                3..10,
                            ),
                        ),
                        3..11,
                    ),
                    Spanned(
                        Ident(
                            Spanned(
                                "testing",
                                13..20,
                            ),
                        ),
                        13..21,
                    ),
                ],
                0..23,
            ),
        ),
        0..23,
    ),
)

--- Errors ---
[]
---
