crates/rym_parser/src/tests/snapshots/rym_parser__tests__expr__if_expressions-2.snap
---
source: crates/rym_parser/src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
if true then print("Hello Universe!") else print("Hello World!")
---

Some(
    Spanned(
        If {
            condition: Spanned(
                Ident(
                    Spanned(
                        "true",
                        3..7,
                    ),
                ),
                3..7,
            ),
            then_branch: Spanned(
                Call {
                    func: Spanned(
                        Ident(
                            Spanned(
                                "print",
                                13..18,
                            ),
                        ),
                        13..18,
                    ),
                    args: Spanned(
                        [
                            Spanned(
                                Literal(
                                    Spanned(
                                        String("Hello Universe!"),
                                        19..36,
                                    ),
                                ),
                                19..36,
                            ),
                        ],
                        18..37,
                    ),
                },
                13..37,
            ),
            else_branch: Some(
                Spanned(
                    Call {
                        func: Spanned(
                            Ident(
                                Spanned(
                                    "print",
                                    43..48,
                                ),
                            ),
                            43..48,
                        ),
                        args: Spanned(
                            [
                                Spanned(
                                    Literal(
                                        Spanned(
                                            String("Hello World!"),
                                            49..63,
                                        ),
                                    ),
                                    49..63,
                                ),
                            ],
                            48..64,
                        ),
                    },
                    43..64,
                ),
            ),
        },
        0..64,
    ),
)

--- Errors ---
[]
---
